--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 server.contextPath=/
+spring.devtools.restart.exclude=static/**,public/**
+
 #debug=true
-spring.datasource.url=jdbc:mysql://localhost:3306/myblog?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/myblog?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=1234567@
 spring.jpa.hibernate.ddl-auto=update
